env fix